test/classes/bradc/overloadMethods/v5bothReturnTypes.good
v5bothReturnTypes.chpl:28: error: return type not compatible with parent class

OR

1..1
1..2
1..3
1..4
1..1 by -1
1..2 by -1
1..3 by -1
1..4 by -1
